[releng] Fix build issues
- Target platform now explicitly lists direct dependencies from Orbit
- Added a feature containing third-party dependencies
- Added an intermediate features/pom.xml

Change-Id: I59eccd0f64514aaca02e12c1ad185f929189b2b4
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/features/org.eclipse.recommenders.privacy.rcp.feature/feature.properties
+++ b/features/org.eclipse.recommenders.privacy.rcp.feature/feature.properties
@@ -1,2 +1,2 @@
-label=Code Recommenders Privacy Preferences UI (Incubator)
+label=Code Recommenders Privacy Preferences (Incubator)
 provider-name=Eclipse Code Recommenders
