--- a/features/org.eclipse.recommenders.privacy.3rd.feature/pom.xml
+++ b/features/org.eclipse.recommenders.privacy.3rd.feature/pom.xml
@@ -8,6 +8,6 @@
 		<version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.recommenders.privacy.rcp.feature</artifactId>
+	<artifactId>org.eclipse.recommenders.privacy.3rd.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 </project>
