--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<artifactId>aggregator</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-    <name>Aggregator for Code Recommenders Privacy Preferences</name>
+	<name>Aggregator for Code Recommenders Privacy Preferences</name>
 	<modules>
 		<module>releng/licenses</module>
 		<module>targets/luna</module>
 		<module>plugins/org.eclipse.recommenders.privacy.rcp</module>
 		<module>tests/org.eclipse.recommenders.privacy.rcp.tests</module>
-		<module>features/org.eclipse.recommenders.privacy.rcp.feature</module>
+		<module>features</module>
 		<module>repositories/head</module>
 	</modules>
 </project>
