--- a/plugins/org.eclipse.recommenders.privacy.rcp/build.properties
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/build.properties
@@ -1,8 +1,10 @@
 source.. = src/
 output.. = target/classes
 src.includes = about.html,\
+               icons/,\
                pom.xml
 bin.includes = META-INF/,\
                about.html,\
+               icons/,\
                plugin.xml,\
                .
