Bug 435634: Approval popup dialog implemented
Change-Id: Iebe3a22b3bf4fc30301e87b1078c3fe31761da67
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -36,28 +36,10 @@ ose (approximate) information about your location."
       </datum>
    </extension>
    <extension
-         point="org.eclipse.recommenders.privacy.rcp.permissions">
-      <permission
-            datumId="org.eclipse.recommenders.privacy.datums.ipAddress"
-            principalId="org.eclipse.recommenders.privacy"
-            policyUri="http://www.example.org/policy/ipaddress"
-            purpose="Your IP address will be send to the Example project whenever you use the Exampl
-e feature for the first time. The Example projects uses your IP address exclusively to keep track of
- the number of simultaneous users. Your IP address will not be stored for more than 24 hours.">
-      </permission>
-      <permission
-            datumId="org.eclipse.recommenders.privacy.datums.stacktraces"
-            policyUri="http://www.example.org/policy/stacktraces"
-            principalId="org.eclipse.recommenders.privacy"
-            purpose="Your stack trace informations will be send to the Example project.">
-      </permission>
-   </extension>
-   <extension
-         point="org.eclipse.recommenders.privacy.rcp.principals">
-      <principal
-            id="org.eclipse.recommenders.privacy"
-            name="Code Recommenders Privacy">
-      </principal>
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipse.recommenders.privacy.rcp.Startup">
+      </startup>
    </extension>
 
 </plugin>
