--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/pom.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/pom.xml
@@ -8,6 +8,6 @@
 		<version>0.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.recommenders.privacy.rcp</artifactId>
+	<artifactId>org.eclipse.recommenders.privacy.example.rcp</artifactId>
 	<packaging>eclipse-plugin</packaging>
 </project>
