Bug 437167: Sorting Catogories and entries in permissions widget
This change uses ICU4J.

It also introduces a product configuration (tools/standard.product)
based on the Eclipse Standard Package.

Change-Id: Iec51a00e7c804d3763dc4626b3e98bc6d3e5ff3b
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>org.eclipse.recommenders.privacy.3rd.feature</module>
 		<module>org.eclipse.recommenders.privacy.rcp.feature</module>
+		<module>org.eclipse.recommenders.privacy.example.rcp.feature</module>
 	</modules>
 	<properties>
 		<privacyVersion>0.1.0-SNAPSHOT</privacyVersion>
