[releng] CQ 8204: Rename maven-license-plugin files to header-*.txt
This issue was raised during CQ 8204 (our initial contribution): The old
name (license-*.txt) might lead consumers to mistake these files for the
licenses themselves.

Change-Id: I8252c4b6d9c4fd12f27e82a280a71201fdac1008
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -60,8 +60,8 @@
 						<id>check-license-headers</id>
 						<configuration>
 							<validHeaders>
-								<validHeader>license-aziza-2014.txt</validHeader>
-								<validHeader>license-codetrails-2014.txt</validHeader>
+								<validHeader>header-aziza-2014.txt</validHeader>
+								<validHeader>header-codetrails-2014.txt</validHeader>
 							</validHeaders>
 						</configuration>
 					</execution>
