Bug 437992: Part 1 - Extend the example plugin to log the java version every 10 minute
Change-Id: I50e9c07fae8c2da39c9f74d40c2f7ef58591f07b
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -28,10 +28,10 @@ selected packages are sent)."
             name="Stack traces">
       </datum>
       <datum
-            description="Allow a plugin to send the JVM version."
+            description="Allow a plugin to send the java version."
             icon="icons/jvm.gif"
-            id="org.eclipse.recommenders.privacy.datums.jvm"
-            name="JVM version">
+            id="org.eclipse.recommenders.privacy.datums.javaVersion"
+            name="Java version">
       </datum>
       <datum
             description="One of the IP addresses assigned to this computer. The IP address may discl
