--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
@@ -12,18 +12,10 @@
    <extension
          point="org.eclipse.recommenders.privacy.rcp.permissions">
       <permission
-            datumId="org.eclipse.recommenders.privacy.datums.machineId"
-            policyUri="http://www.example.org/policy/machineid"
+            datumId="org.eclipse.recommenders.privacy.datums.javaVersion"
+            policyUri="http://www.example.org/policy/javaversion"
             principalId="org.eclipse.recommenders.privacy.example"
-            purpose="Your Machine ID will be send to the Example project whenever you use the Exampl
-e feature for the first time. The Example projects uses your Machine ID exclusively to keep track of
- the number of simultaneous users. Your Machine ID will not be stored for more than 24 hours.">
-      </permission>
-      <permission
-            datumId="org.eclipse.recommenders.privacy.datums.stacktraces"
-            policyUri="http://www.example.org/policy/stacktraces"
-            principalId="org.eclipse.recommenders.privacy.example"
-            purpose="Your stack trace informations will be send to the Example project.">
+            purpose="Your java version will be send to the Example project.">
       </permission>
    </extension>
 
