--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
@@ -8,9 +8,14 @@
 	</extension>
 	<extension point="org.eclipse.recommenders.privacy.rcp.permissions">
 		<permission
-				datumId="org.eclipse.recommenders.privacy.rcp.datums.javaVersion"
-				principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
-				policyUri="http://www.example.org/policy/javaVersion"
-				purpose="%permissions.javaVersion.purpose"/>
+			datumId="org.eclipse.recommenders.privacy.rcp.datums.javaVersion"
+			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
+			policyUri="http://www.example.org/policy/javaVersion"
+			purpose="%permissions.javaVersion.purpose"/>
+		<permission
+			datumId="org.eclipse.recommenders.privacy.rcp.datums.userId"
+			policyUri="http://www.example.org/policy/userId"
+			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
+			purpose="%permissions.userId.purpose"/>
 	</extension>
 </plugin>
