[releng] Package structure adjusted
Change-Id: I0257ebd393a14a3f40f4a6d9587ae5f48c280419
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -7,11 +7,11 @@
 	<extension point="org.eclipse.ui.preferencePages">
 		<page id="org.eclipse.recommenders.privacy.rcp.preferencesPages.privacy"
 			category="org.eclipse.ui.preferencePages.Workbench"
-			class="org.eclipse.recommenders.privacy.rcp.preferences.PrivacyPreferencePage"
+			class="org.eclipse.recommenders.internal.privacy.rcp.preferences.PrivacyPreferencePage"
 			name="%preferencePages.privacy.name"/>
 		<page id="org.eclipse.recommenders.privacy.rcp.preferencesPages.userId"
 			category="org.eclipse.recommenders.privacy.rcp.preferencesPages.privacy"
-			class="org.eclipse.recommenders.privacy.rcp.preferences.UserIdPreferencePage"
+			class="org.eclipse.recommenders.internal.privacy.rcp.preferences.UserIdPreferencePage"
 			name="%preferencePages.userId.name"/>
 	</extension>
 	<extension point="org.eclipse.recommenders.privacy.rcp.datums">
@@ -30,6 +30,6 @@
 			description="%datums.userId.description"/>
 	</extension>
 	<extension point="org.eclipse.ui.startup">
-		<startup class="org.eclipse.recommenders.privacy.rcp.Startup"/>
+		<startup class="org.eclipse.recommenders.internal.privacy.rcp.Startup"/>
 	</extension>
 </plugin>
