[ui] Show Permission Approval wizard on first activation.
Change-Id: I17295a422366d6e099e2f5619dbcbb85875b90b5
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -16,7 +16,7 @@
 	</extension>
 	<extension point="org.eclipse.recommenders.privacy.rcp.datums">
 		<datum id="org.eclipse.recommenders.privacy.rcp.datums.javaVersion"
-			icon="icons/javaVersion.gif"
+			icon="icons/obj16/javaVersion.gif"
 			name="%datums.javaVersion.name"
 			description="%datums.javaVersion.description"/>
 		<datum id="org.eclipse.recommenders.privacy.rcp.datums.inet4Address"
