--- a/features/pom.xml
+++ b/features/pom.xml
@@ -5,12 +5,13 @@
 	<parent>
 		<groupId>org.eclipse.recommenders</groupId>
 		<artifactId>features</artifactId>
-		<version>2.1.1</version>
+		<version>2.1.4</version>
 	</parent>
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>features</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<name>Features</name>
 	<modules>
 		<module>org.eclipse.recommenders.privacy.3rd.feature</module>
 		<module>org.eclipse.recommenders.privacy.rcp.feature</module>
