--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -5,15 +5,17 @@
 	<parent>
 		<groupId>org.eclipse.recommenders</groupId>
 		<artifactId>plugins</artifactId>
-		<version>2.1.1</version>
+		<version>2.1.4</version>
 	</parent>
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>plugins</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<name>Plugins</name>
 	<modules>
 		<module>org.eclipse.recommenders.privacy.rcp</module>
 		<module>org.eclipse.recommenders.privacy.example.rcp</module>
+		<module>org.eclipse.recommenders.privacy.heartbeat.rcp</module>
 	</modules>
 	<properties>
 		<privacyVersion>0.1.0-SNAPSHOT</privacyVersion>
