[preferences] Bug 437169: Allow privacy preferences to be exported
Change-Id: I457f43059b8a60938a4d0810ca7f1cf336680dda
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>
Signed-off-by: Johannes Dorn <johannes.dorn@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -14,6 +14,16 @@
 			class="org.eclipse.recommenders.internal.privacy.rcp.preferences.UserIdPreferencePage"
 			name="%preferencePages.userId.name"/>
 	</extension>
+	<extension point="org.eclipse.ui.preferenceTransfer">
+		<transfer id="org.eclipse.recommenders.privacy.rcp.transfer.permissions"
+			icon="icons/view16/logo.png"
+			name="%preferenceTransfer.permissions.name">
+			<description>%preferenceTransfer.permissions.description</description>
+			<mapping scope="instance">
+				<entry node="org.eclipse.recommenders.privacy.rcp.permissions"/>
+			</mapping>
+		</transfer>
+	</extension>
 	<extension point="org.eclipse.recommenders.privacy.rcp.datums">
 		<datum id="org.eclipse.recommenders.privacy.rcp.datums.javaVersion"
 			icon="icons/obj16/javaVersion.gif"
