[preferences] Bug 441772: Support a Whitelist mechanism for permissions
Change-Id: Id4e1f3d53755dd9f2bbc17e40876db5d83c60b25
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
@@ -9,8 +9,9 @@
 	<extension point="org.eclipse.recommenders.privacy.rcp.permissions">
 		<permission
 			datumId="org.eclipse.recommenders.privacy.rcp.datums.heartbeat"
-			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
 			policyUri="http://www.example.org/policy/heartbeat"
-			purpose="%permissions.heartbeat.purpose"/>
+			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
+			purpose="%permissions.heartbeat.purpose"
+			advancedPreferencesDialogFactory="org.eclipse.recommenders.internal.privacy.example.rcp.dialogs.HeartbeatAdvancedPreferencesFactory"/>
 	</extension>
 </plugin>
