[services] Turn all services into singletons. * Extend the example plugin to send the anonymous ID.
Change-Id: Idafbfbc8568f2d3b441be71d5f308c0f8df75781
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
@@ -13,5 +13,10 @@
 			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
 			purpose="%permissions.heartbeat.purpose"
 			advancedPreferencesDialogFactory="org.eclipse.recommenders.internal.privacy.example.rcp.dialogs.HeartbeatAdvancedPreferencesFactory"/>
+		<permission
+			datumId="org.eclipse.recommenders.privacy.rcp.datums.anonymousId"
+			policyUri="http://www.example.org/policy/anonymousId"
+			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
+			purpose="%permissions.anonymousId.purpose"/>
 	</extension>
 </plugin>
