[releng] Bug 457182 - Add target platform definition for Kepler, and Mars
Change-Id: I3c72c2a7d08d026981124caacd4266be822fcd72
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<name>Aggregator for Code Recommenders Privacy Preferences</name>
 	<modules>
 		<module>releng/licenses</module>
-		<module>targets/luna</module>
+		<module>targets</module>
 		<module>plugins</module>
 		<module>tests/org.eclipse.recommenders.privacy.rcp.tests</module>
 		<module>features</module>
