[releng] Bug 458755: Feature provides no copyright info and details
Change-Id: I1f43ccfa31c389df4e244ab4e5d758645d5463c3
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/features/org.eclipse.recommenders.privacy.example.rcp.feature/feature.properties
+++ b/features/org.eclipse.recommenders.privacy.example.rcp.feature/feature.properties
@@ -1,2 +1,10 @@
-label=Code Recommenders Privacy Preferences Example (Incubator)
+label=Privacy Preferences Example (Incubator)
 provider-name=Eclipse Code Recommenders
+description=The Privacy Preferences Example illustrates how to best use the Privacy Preferences framework. \
+ Install this feature if you would like to see the framework in action. \
+ To this end, the Privacy Preferences Example implements a simple scenario in which a regular heartbeat message is sent to a remote server.
+copyright=Copyright (c) 2014-15 Codetrails GmbH.\n\
+ All rights reserved. This program and the accompanying materials\n\
+ are made available under the terms of the Eclipse Public License v1.0\n\
+ which accompanies this distribution, and is available at\n\
+ http://www.eclipse.org/legal/epl-v10.html\n
