--- a/features/org.eclipse.recommenders.privacy.rcp.feature/feature.properties
+++ b/features/org.eclipse.recommenders.privacy.rcp.feature/feature.properties
@@ -1,2 +1,9 @@
-label=Code Recommenders Privacy Preferences (Incubator)
+label=Privacy Preferences (Incubator)
 provider-name=Eclipse Code Recommenders
+description=Privacy Preferences helps you manage plug\u2010ins that want to share selected information with interested parties. \
+ Install this feature if you want to manage your privacy preferences in a single place.
+copyright=Copyright (c) 2014-15 Codetrails GmbH.\n\
+ All rights reserved. This program and the accompanying materials\n\
+ are made available under the terms of the Eclipse Public License v1.0\n\
+ which accompanies this distribution, and is available at\n\
+ http://www.eclipse.org/legal/epl-v10.html\n
