[releng] Add dedicated milestone update site
Add tools/hudson/publish-repository.sh script

Change-Id: I7d55cce0c7f8b7bd3acbaeecb860d039d9859af4
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,6 @@
 		<module>plugins</module>
 		<module>tests/org.eclipse.recommenders.privacy.rcp.tests</module>
 		<module>features</module>
-		<module>repositories/head</module>
+		<module>repositories</module>
 	</modules>
 </project>
