[releng] Documentation on how to release
Also, added intermediate tests/pom.xml.

Change-Id: I18bf791d037a082618353158fcabcb977b1ca4d4
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<module>releng/licenses</module>
 		<module>targets</module>
 		<module>plugins</module>
-		<module>tests/org.eclipse.recommenders.privacy.rcp.tests</module>
+		<module>tests</module>
 		<module>features</module>
 		<module>repositories</module>
 	</modules>
