--- a/tests/org.eclipse.recommenders.privacy.rcp.tests/pom.xml
+++ b/tests/org.eclipse.recommenders.privacy.rcp.tests/pom.xml
@@ -4,111 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.recommenders</groupId>
+		<groupId>org.eclipse.recommenders.privacy</groupId>
 		<artifactId>tests</artifactId>
-		<version>2.1.11</version>
+		<version>0.1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>org.eclipse.recommenders.privacy.rcp.tests</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
-
-	<properties>
-		<privacyVersion>0.1.0-SNAPSHOT</privacyVersion>
-	</properties>
-
-	<repositories>
-		<repository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
-		</repository>
-	</repositories>
-	<!-- Plugin repositories are also used to locate plugin dependencies. -->
-	<pluginRepositories>
-		<pluginRepository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
-		</pluginRepository>
-	</pluginRepositories>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<configuration>
-					<target>
-						<artifact>
-							<groupId>org.eclipse.recommenders.privacy</groupId>
-							<artifactId>${simrel}</artifactId>
-							<version>${privacyVersion}</version>	
-						</artifact>
-					</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.mycila.maven-license-plugin</groupId>
-				<artifactId>maven-license-plugin</artifactId>
-				<dependencies>
-					<dependency>
-						<groupId>org.eclipse.recommenders.privacy</groupId>
-						<artifactId>licenses</artifactId>
-						<version>${privacyVersion}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>check-license-headers</id>
-						<configuration>
-							<validHeaders>
-								<validHeader>header-aziza-2014.txt</validHeader>
-								<validHeader>header-codetrails-2014.txt</validHeader>
-							</validHeaders>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<configuration>
-					<useUIHarness>true</useUIHarness>
-					<dependencies>
-						<dependency>
-							<artifactId>org.eclipse.e4.rcp</artifactId>
-							<type>eclipse-feature</type>
-						</dependency>
-					</dependencies>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
-	<profiles>
-		<profile>
-			<id>mac</id>
-			<activation>
-				<os>
-					<family>mac</family>
-				</os>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-surefire-plugin</artifactId>
-						<configuration>
-							<dependencies combine.children="append">
-								<dependency>
-									<artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-									<type>eclipse-plugin</type>
-								</dependency>
-							</dependencies>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
